# log-utils-example

./: README.md  pyproject.toml
example/: example.py
src/log_utils/: __init__.py  main.py
src/log_utils/handlers/: __init__.py  log_handlers.py
src/log_utils/models/: __init__.py  aws.py  defaults.py  foraging.py  log_structure.py
