[project]
name = "log-utils"
version = "0.1.0"
description = "Utility library that helps configure loguru logging and provides extensible log schemas/handlers."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "mypy>=1.19.1",
    "pydantic>=2.12.5",
    "ruff>=0.14.9",
]
authors = [
    {name = "Jessy Liao", email = "jessy.liao@alleninstitute.org"},
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.ruff.lint]
select = ["C"]

[tool.ruff.lint.mccabe]
max-complexity = 10
